@@ -1,48 +1,41 @@
 How to run the NIST CCVS85 (aka. ANSI85) Test Suite
 =====================================
 
-*NOTE* It is expected that WARNING messages appear
-when running the test.
+*NOTE* It is expected that WARNING messages appear when running the test.
 
 *NOTE* The language interpreter "perl" is required to run these tests.
 
-The final command of the the test is a diff between
-expected results and actual results.
-ie. diff summary.txt summary.log
-If there is any output from this command, please
-tar and compress the complete cobol85 directory
-and report this to the OC list. You will receive
-further instructions where to send this.
+The final command of the the test is a diff between expected results and
+actual results, i.e. "diff summary.txt summary.log".
+If there is any output from this command, please tar and compress the
+complete cobol85 directory and report this to the GnuCOBOL mailing list.
+You will receive further instructions where to send this.
 
-*NOTE* This test can take a long time depending
-on your hardware.
+*NOTE* This test can take a long time depending on your hardware.
 
-1. EITHER -
-a) Download the test archive from -
-	http://www.sim-basis.de/newcob.val.gz
-   Uncompress it -
-	gunzip newcob.val.gz	(alternatively gzip -d newcob.val.gz)
+1. Prerequisite: test suite "newcob.val", EITHER -
+a) Manually download the test archive "newcob.val.Z" from
+   http://www.itl.nist.gov/div897/ctg/cobol_form.htm
 
-OR
+   Uncompress it and move the file newcob.val to the tests/cobol85 directory
 
-b) Download the test archive `newcob.val.Z' from
-	http://www.itl.nist.gov/div897/ctg/cobol_form.htm
-   Uncompress it:
-	uncompress newcob.val.Z
+b) Automatic download/uncompress
+   If the test suite is not available "make test" will uncompress the archive
+   "newcob.val.Z" from tests/cobol85.
+   If the test archive is also missing "make test" will try to download the
+   archive beforehand.
 
-2. Move the file newcob.val to the tests/cobol85 directory
+2. Run the test suite:
+   make test
 
-3. Run the test suite:
+3. Test report summary will be put in summary.log.
 
-	cd tests/cobol85
-	make test
+4. When rerunning the tests as a result of a change, always do a "make clean"
+   *before* "make test"
 
-4. Test report summary will be put in summary.log.
-
-5. When rerunning test as a result of a change, always
-   do a "make clean" before "make test"
-
-6. The default OC configuration tests are NC SM IC SQ RL IX ST SG OB IF DB
+5. The default tests configured for GnuCOBOL are:
+   NC SM IC SQ RL IX ST SG OB IF DB
+   Note: IX will be skipped if ISAM access was disabled during configure.
 
 Make Options
 ------------
