@@ -1,4 +1,9 @@
 
+2016-01-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
+
+	* Makefile.am: added targets "test" (running ANSI testsuite) and
+	  "checkall" (running both GnuCOBOL and ANSI testsuite)
+
 2015-12-23  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* general: remove -std=cobol2002 for compiling (effectively using default),
