@@ -1,4 +1,10 @@
 
+2016-01-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
+
+	* Makefile.am: added targets "test" (running ANSI testsuite) and
+	  "checkall" (running both GnuCOBOL and ANSI testsuite), both do a
+	  full build of GnuCOBOL if necessary
+
 2015-12-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* Taken into account all copyright assignments and rechecking the dates
